Adding css and js

--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Hello World!</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>A-H-Vu's Website</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-
-<h1>Hello World!</h1>
-<p></p>
-
+    <script src="js/app.js"></script>
+    <h1>Hello World!</h1>
+    <p>This website will be in progress for a while</p>
 </body>
+
 </html> 
