--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <script src="js/app.js"></script>
     <h1>Hello World!</h1>
-    <p>This website will be in progress for a while</p>
+    <p>This website will be in progress for a while.</p>
 </body>
 
 </html> 
